@@ -1,0 +1,476 @@
+# All translations in this file are community made, this means there may be errors / missed translations, if you are able to improve upon any translation it would be greatly appreciated
+
+# Able to help with translations? Either improving a already existing language, or adding a whole new one. Join the discord server: https://discord.gg/JF9DNs3 
+# or message me on spigot: https://www.spigotmc.org/members/booksaw123.120955/
+
+# Any placeholders from placeholder API will work in this file
+
+# Credit for contributions to this file: Areanydd
+
+invalidArg: '&4Argumente invalide, ajutor.'
+inTeam: '&4Trebuie sa fii intr-o echipa pentru a face asta.'
+notInTeam: '&4Trebuie sa parasesti echipa ta inainte de a face asta.'
+needOwner: '&4Trebuie sa fii proprietarul echipei pentru a face asta.'
+needAdmin: '&4Trebuie sa fii admin sau proprietar al echipei pentru a face asta.'
+needPlayer: '&4Trebuie sa fii un jucator pentru a face asta.'
+noPlayer: '&4Jucatorul specificat nu a fost gasit'
+notTeam: '&6&4Aceasta echipa nu exista, incearca &b/team create <nume>'
+needSameTeam: '&6Nu esti in aceeasi echipa cu acea persoana.'
+noPerm: '&4Nu ai permisiunea de a face asta.'
+prefixSyntax: '&7[%s&7] &r%s'
+bannedChar: '&4Caracterul pe care ai incercat sa-l folosesti este interzis.'
+noTeam: '&4Aceasta echipa nu exista.'
+loading: '&6Incarcare'
+cooldown:
+  wait: '&4Trebuie sa mai astepti %s secunde inainte de a rula asta!'
+cost:
+  tooPoor: '&4Esti prea sarac pentru a rula aceasta comanda.'
+  run: '&4&l-%s'
+placeholder:
+  noTeam: '&7Nicio echipa'
+  noDescription: ''
+  money: '%s'
+  owner: Proprietar
+  admin: Admin
+  default: Implicit
+  name: '%s'
+  tag: '%s'
+  displayname: '%s'
+  inteam: 'adevarat'
+  notinteam: 'fals'
+  noTitle: ''
+prefix:
+  owner: ' **'
+  admin: ' *'
+  default: ' '
+create:
+  exists: '&6Aceasta echipa exista deja.'
+  success: '&6Echipa ta a fost creata.'
+  banned: '&4Acest nume de echipa este interzis.'
+  maxLength: '&4Acest nume de echipa este prea lung.'
+leave:
+  success: '&6Ai parasit echipa.'
+  lastOwner: '&6Esti singurul proprietar al echipei. Promoveaza pe cineva altcineva sau foloseste &b/team disband &6pentru a dizolva echipa.'
+rank:
+  noTeam: '&4Echipa nu a fost gasita.'
+  info: '&6Pozitia ta in echipa:'
+  infos: '&6Gradul echipei: &b%s &7(punctaj necesar pentru urmatorul grad)'
+  infom: '&6Gradul echipei: &b%s &7($%s necesari pentru urmatorul grad)'
+  infomm: '&6Gradul echipei: &b%s &7(Esti deja la gradul maxim)'
+  syntax: '&b%s: &6%s &7(%s)'
+delhome:
+  success: '&6Locatia centrala a echipei tale a fost stearsa.'
+  noHome: '&4Echipa ta nu a stabilit o locatie centrala.'
+disband:
+  success: '&6Ai dizolvat echipa.'
+  confirm: '&6Scrie &b/team disband &6din nou pentru a confirma.'
+description:
+  success: '&6Ai schimbat descrierea echipei.'
+  view: '&6Descrierea echipei: %s'
+  noDesc: '&6Nu a fost stabilita o descriere pentru echipa.'
+  noPerm: '&4Nu ai permisiunea de a edita descrierea.'
+name:
+  success: '&6Ai schimbat numele echipei.'
+  view: '&6Numele echipei: %s'
+  exists: '&4Aceasta echipa deja exista.'
+  noPerm: '&4Nu ai permisiunea de a schimba numele echipei tale.'
+invite:
+  success: '&6Acel jucator a fost invitat in echipa.'
+  invite: '&6Ai fost invitat sa te alaturi echipei %s. Foloseste &b/team join <nume_echipa> &6pentru a te alatura echipei.'
+  inTeam: '&6Acel jucator este deja intr-o echipa.'
+  banned: '&6Acel jucator este interzis in echipa ta.'
+  full: '&6Echipa ta a atins numarul maxim de membri. Elimina pe cineva inainte de a invita alti membri.'
+  expired: '&4Invitatia de la &b%s &4a expirat.'
+join:
+  success: '&6Ai aderat la echipa respectiva.'
+  notify: '&6Bine ai venit, &b%s, &6in echipa!'
+  notInvited: '&6&4Nu ai fost invitat in acea echipa.'
+  banned: '&6&4Esti interzis in acea echipa.'
+  full: '&4Echipa respectiva este plina.'
+open:
+  successopen: '&6Echipa ta este acum deschisa pentru toata lumea.'
+  successclose: '&6Echipa ta este acum doar cu invitatie.'
+title:
+  change: '&6Titlul tau a fost schimbat la &b%s'
+  remove: '&6Titlul tau a fost eliminat.'
+  success: '&6Acel titlu a fost schimbat'
+  tooLong: '&4Acel titlu este prea lung.'
+  noFormat: '&4Nu ai permisiunea de a formata titlurile.'
+  noColor: '&4Nu ai permisiunea de a colora titlurile.'
+  reset: '&6Titlul tau a fost resetat.'
+  noPerm: '&4Nu ai permisiunea de a-ti schimba titlul echipei.'
+info:
+  needTeam: '&6Nicio echipa sau jucator gasit sub acel nume.'
+  name: '&6Nume: &b%s'
+  description: '&6Descriere: &b%s'
+  open: '&6Deschis: &b%s'
+  level: '&6Nivel: &b%s'
+  owner: '&6Proprietari: &b%s'
+  admin: '&6Admini: &b%s'
+  default: '&6Membri: &b%s'
+  tag: '&6Tag: &b%s'
+  fail: '&6Nicio echipa sau jucator gasit sub acel nume'
+  score: '&6Puncte: &b%s'
+  money: '&6Sold: &b%s'
+  ally: '&6Aliante: &b%s'
+kick:
+  success: '&6Acel jucator a fost dat afara.'
+  notify: '&6Ai fost dat afara din echipa %s'
+  title: '&4Ai fost dat afara din echipa ta.'
+  noPerm: '&6Nu ai permisiunea de a da afara acea persoana.'
+ban:
+  success: '&6Acel jucator a fost interzis.'
+  notify: '&6Ai fost interzis din echipa %s'
+  title: '&4Ai fost interzis din echipa ta.'
+  noPerm: '&6Nu ai permisiunea de a interzice acea persoana.'
+  already: '&6Acel jucator este deja interzis.'
+unban:
+  success: '&6Acel jucator a fost reabilitat.'
+  notify: '&6Ai fost reabilitat din echipa %s'
+  noPerm: '&6Nu ai permisiunea de a reabilita acea persoana.'
+  not: '&6Acel jucator nu este interzis.'
+promote:
+  success: '&6Acel jucator a fost promovat.'
+  noPerm: '&6Nu ai permisiunea de a promova acea persoana.'
+  max: '&6Aceasta persoana este deja promovata la maxim!'
+  notify: '&6Ai fost promovat!'
+  maxAdmins: '&4Echipa ta are deja numarul maxim de admini, retrogradeaza pe cineva sau urca-ti echipa de nivel.'
+  maxOwners: '&4Echipa ta are deja numarul maxim de proprietari, retrogradeaza pe cineva sau urca-ti echipa de nivel.'
+demote:
+  success: '&6Acel jucator a fost retrogradat.'
+  noPerm: '&6Nu ai permisiunea de a retrograda acea persoana.'
+  min: '&6Aceasta persoana are deja cel mai mic rang.'
+  notify: '&6Ai fost retrogradat.'
+  lastOwner: '&6Nu poti retrograda ultimul proprietar, promoveaza pe cineva altcineva mai intai.'
+  maxAdmins: '&4Echipa ta are deja numarul maxim de admini, elimina un admin sau urca-ti echipa de nivel.'
+home:
+  success: '&6Ai fost teleportat.'
+  noHome: '&6Echipa ta nu a stabilit un punct de intoarcere.'
+  world: '&4Punctul de intoarcere al echipei tale nu a putut fi gasit.'
+sethome:
+  success: '&6Punctul de intoarcere al echipei tale a fost setat.'
+  noPerm: '&6Nu ai un rang suficient de inalt pentru a seta punctul de intoarcere al echipei tale.'
+chat:
+  enabled: '&6Acum mesajele tale merg in chat-ul echipei.'
+  disabled: '&6Acum mesajele tale merg in chat-ul global.'
+  syntax: '&b[Echipa]&f%s&f: %s'
+color:
+  success: '&6Culoarea echipei tale a fost schimbata.'
+  fail: '&6Aceea nu este o culoare de chat recunoscuta.'
+  banned: '&4Poti folosi doar culori, nu si coduri de formatare.'
+deposit:
+  tooLittle: '&4Nu poti depune sume negative.'
+  fail: '&4Depunerea a esuat!'
+  success: '&6Bani depusi.'
+  max: '&4Asta ar depasi soldul maxim permis al echipei tale.'
+withdraw:
+  tooLittle: '&4Nu poti retrage sume negative.'
+  fail: '&4Retragerea a esuat.'
+  success: '&6Bani retrasi.'
+  notEnough: '&6Echipa ta nu are suficienti bani.'
+ally:
+  already: '&4Sunteti deja aliati.'
+  success: '&6Echipele voastre sunt acum aliate.'
+  ally: '&6Echipa ta este acum aliata cu &b%s'
+  requested: '&6O cerere de aliere a fost trimisa acelei echipe.'
+  request: '&b%s &6a trimis o cerere de aliere, foloseste &b/team ally <echipa> &6pentru a accepta.'
+  self: '&4Nu poti alia propria ta echipa.'
+  from: '&6Aveti cereri de alianta de la: %s'
+  noRequests: '&4Nu ai cereri de alianta.'
+  onJoin: '&6Ai cereri de alianta noi, foloseste &b/team ally &6pentru a le vedea.'
+  limit: '&4Limita pentru aliati a fost atinsa.'
+  alreadyrequest: '&4Ai trimis deja o cerere de alianta catre acea echipa.'
+allychat:
+  disabled: '&6Mesajele tale nu mai merg in chat-ul de alianta.'
+  enabled: '&6Mesajele tale merg acum in chat-ul de alianta.'
+  syntax: '&d[%s]&f%s&f: %s'
+neutral:
+  self: '&6Asta este propria ta echipa.'
+  requestremove: '&6Cererea de alianta a fost eliminata.'
+  reject: '&4Cererea ta de alianta cu &b%s &4a fost respinsa.'
+  notAlly: '&4Nu esti aliat cu acea echipa.'
+  success: '&4Nu mai esti aliat cu acea echipa.'
+  remove: '&4Nu mai esti aliat cu &b%s'
+list:
+  noPage: '&6Aceasta pagina nu a fost gasita.'
+  header: '&7--- &bLista echipe pagina %s &7---'
+  body: '&6%s: &b%s'
+  footer: '&7--- &6foloseste &b/team list [pagina] &6pentru a vedea mai mult &7---'
+setowner:
+  use: '&6Nu poti promova acel jucator, foloseste &b/team setowner <jucator> &6pentru a-l promova la rangul de proprietar.'
+  success: '&6Acel jucator este acum proprietar.'
+  notify: '&6Acum esti proprietarul echipei tale.'
+  max: '&4Acel jucator este deja proprietar.'
+setwarp:
+  exist: '&4Acel punct de intoarcere exista deja'
+  max: '&4Echipa ta a ajuns la numarul maxim de puncte de intoarcere setate.'
+  success: '&6Acel punct de intoarcere a fost creat.'
+  char: '&4Numele acelui punct de intoarcere contine caractere interzise.'
+warp:
+  nowarp: '&4Acel punct de intoarcere nu exista.'
+  invalidPassword: '&4Parola invalida pentru acel punct de intoarcere.'
+  success: '&6Ai fost teleportat.'
+  world: '&4Locatia acelui punct de intoarcere nu a putut fi gasita.'
+warps:
+  syntax: '&6Puncte de intoarcere: &b%s'
+  none: '&4Echipa ta nu are niciun punct de intoarcere setat.'
+delwarp:
+  success: '&4Acel punct de intoarcere a fost sters.'
+teleport:
+  fail: '&4Teleportarea a esuat.'
+  wait: '&6Asteapta &b%s &6secunde.'
+chest:
+  claim:
+    noChest: '&4Nu stai pe un chest.'
+    limit: '&4Echipa ta a revendicat numarul maxim de lazi.'
+    claimed: '&4Acest chest a fost deja revendicata.'
+    success: '&6Ai revendicat acest chest.'
+  remove:
+    noChest: '&4Nu stai pe un chest.'
+    notClaimed: '&4Echipa ta nu a revendicat acest chest.'
+    success: '&4Team-ul tau nu mai trebuie sa ia acest chest.'
+  all:
+    success: '&6Toate cuferele au fost luate.'
+  claimed: '&4Acest chest este luat de &a%s'
+echest:
+  echest: Enderchest
+pvp:
+  enabled: '&6PvP a fost activat pentru echipa ta.'
+  disabled: '&6PvP a fost dezactivat pentru echipa ta.'
+rankup:
+  max: '&4Esti deja la rangul maxim.'
+  score: '&4Ai nevoie de %s puncte pentru a urca in rang.'
+  money: '&4Ai nevoie de %s bani in balanta echipei pentru a urca in rang.'
+  success: '&6Echipa ta s-a ridicat la un rang superior.'
+tag:
+  banned: '&4Aceasta eticheta este interzisa.'
+  success: '&6Eticheta echipei tale a fost schimbata cu succes.'
+  maxLength: '&4Aceasta eticheta este prea lunga.'
+  noPerm: '&4Nu ai permisiunea de a schimba eticheta echipei.'
+admin:
+  cancel: '&4Comanda a fost anulata de catre alt plugin.'
+  tag:
+    success: '&6Eticheta echipei a fost schimbata cu succes.'
+  setrank:
+    success: '&6Rangul echipei a fost setat cu succes.'
+    'no': '&4Acest rang nu exista sau nu este configurat corect.'
+  config:
+    reload: '&6BetterTeams a fost reincarcat. (Daca intampini probleme cand folosesti aceasta comanda, reporneste serverul!)'
+  holo:
+    create:
+      success: '&6Holograma a fost creata.'
+    remove:
+      noHolo: '&4Nu au fost gasite holograme.'
+      success: '&6Holograma a fost stearsa.'
+  title:
+    success: '&6Titlul jucatorului a fost schimbat.'
+    reset: '&6Titlul jucatorului a fost resetat.'
+  version: '&6Versiunea curenta a pluginului: &b%s'
+  versionstorage: '&6Metoda de stocare: &b%s'
+  versionversion: '&6Versiunea Minecraft: &b%s'
+  noTeam: '&4Aceasta nu este o echipa.'
+  home:
+    success: '&6Ai fost teleportat la baza echipei respective.'
+    noHome: '&4Echipa respectiva nu are o baza stabilita.'
+  name:
+    success: '&6Numele echipei a fost schimbat.'
+  description:
+    success: '&6Numele echipei respective a fost schimbat.'
+  open:
+    successopen: '&6Echipa este acum deschisa pentru toata lumea.'
+    successclose: '&6Echipa este acum doar pentru invitati.'
+  invite:
+    success: '&6Acel jucator a fost invitat in echipa respectiva.'
+  create:
+    success: '&6Echipa respectiva a fost creata.'
+  join:
+    banned: '&4Acel jucator este interzis in echipa respectiva.'
+    success: '&6Acel jucator s-a alaturat echipei.'
+    notify: '&6Ai intrat in echipa &b%s'
+    full: '&4Echipa este plina.'
+  notInTeam: '&6Acel jucator nu poate fi intr-o echipa inainte de a face asta.'
+  inTeam: '&4Acel jucator nu este intr-o echipa.'
+  leave:
+    success: '&6Acel jucator a parasit echipa respectiva.'
+    notify: '&6Ai parasit echipa respectiva.'
+  demote:
+    notify: '&6Ai fost retrogradat.'
+    success: '&6Acel jucator a fost retrogradat.'
+    min: '&4Acel jucator nu poate fi retrogradat mai mult.'
+    maxAdmins: '&4Echipa are deja numarul maxim de administratori, eliminati unul inainte de a retrograda acest jucator.'
+  promote:
+    max: '&6Acel jucator are deja rangul maxim.'
+    notify: '&6Ai fost promovat.'
+    success: '&6Acel jucator a fost promovat.'
+    owner: '&6Este configurat ca echipele sa aiba doar un singur proprietar, foloseste &b/teama setowner <jucator> &6pentru a seta jucatorul ca proprietar.'
+    maxAdmins: '&4Echipa are deja numarul maxim de administratori, eliminati unul inainte de a promova acest jucator.'
+    maxOwners: '&4Echipa are deja numarul maxim de proprietari, eliminati unul inainte de a promova acest jucator.'
+  setowner:
+    already: '&4Acel jucator este deja proprietar.'
+    nonotify: '&6Nu mai esti proprietarul echipei.'
+    success: '&6Acel jucator este noul proprietar al echipei.'
+    notify: '&6Esti acum proprietarul echipei tale.'
+  warps:
+    none: '&4Echipa respectiva nu a stabilit nicio teleportare.'
+  setwarp:
+    success: '&6Aceasta teleportare a fost stabilita.'
+    max: '&6Echipa respectiva a atins deja numarul maxim de teleportari.'
+  purge:
+    confirm: '&6Ruleaza aceasta comanda in urmatoarele 10 secunde pentru a confirma, &4ACEASTA NU POATE FI ANULATa sI VA RESETA SCORURILE PENTRU TOATE ECHIPELE!'
+    success: '&6Echipele au fost curatate.'
+  score:
+    tooSmall: '&4Scorul trebuie sa fie mai mare de 0!'
+    success: '&6Scorul echipei respective a fost schimbat.'
+  bal:
+    toSmall: '&4Soldul trebuie sa fie mai mare de 0!'
+    success: '&6Soldul echipei respective a fost schimbat.'
+  update: '&4A fost lansata o noua versiune a pluginului Better Teams, actualizeaza aici: (https://www.spigotmc.org/resources/better-teams.17129/)'
+  disband:
+    success: '&6Echipa respectiva a fost desfiintata cu succes.'
+  color:
+    success: '&6Culoarea echipei respective a fost schimbata.'
+  chest:
+    claim:
+      success: '&6Ai revendicat acest chest in numele echipei.'
+    remove:
+      success: '&6Ai eliminat cu succes revendicarea de pe acest chest.'
+      notClaimed: '&4Nicio echipa nu a revendicat acest chest.'
+    all:
+      success: '&6Toate revendicarile au fost eliminate de pe echipa respectiva.'
+    disable:
+      already: '&4Revendicarea de lazi este deja dezactivata.'
+      success: '&6Revendicarea de lazi a fost dezactivata.'
+    disabled:
+      bc: '&6&lToate lazile revendicate pot fi deschise acum.'
+    enable:
+      already: '&4Revendicarea de lazi este deja activata.'
+      success: '&6Revendicarea de lazi a fost activata.'
+    enabled:
+      bc: '&6&lToate lazile revendicate sunt blocate acum.'
+  teleport:
+    success: '&6Toti membrii online ai echipei respective au fost teleportati.'
+  versionlanguage: '&6Limba selectata: &b%s'
+nametag:
+  
+  syntax: '&6&l%s&r '
+holo:
+  leaderboard: '&eLeaderboard'
+  syntax: '&6%s: &b%s'
+  msyntax: '&6%s: &b$%s'
+top:
+  leaderboard: '&eLeaderboard'
+  syntax: '&b%s: &6%s &7(%s)'
+  divide: '&f...'
+baltop:
+  leaderboard: '&eLeaderboard'
+  syntax: '&b%s: &6%s &7(%s)'
+  divide: '&f...'
+spy:
+  stop: '&6Nu mai spionezi mesajele echipei.'
+  start: '&6Acum spionezi mesajele echipei.'
+  team: '&7[&b%s&7]&f%s&f: %s'
+  ally: '&7[&d%s&7]&f%s&f: %s'
+uclaim:
+  team: '&4Trebuie sa faci parte dintr-o echipa pentru a crea o revendicare.'
+  member: '&4Nu poti parasi revendicarea echipei tale.'
+  kick: '&4Nu poti exclude membri ai propriei echipe din revendicarea ta.'
+  ban: '&4Nu poti interzice membri ai propriei echipe din revendicarea ta.'
+  dissolve: '&4Echipa ta a fost desfiintata, asa ca revendicarea ta a fost dizolvata.'
+help:
+  description: Vezi si schimba descrierea echipei tale.
+  ban: Interzice jucatorul specificat din echipa ta.
+  home: Te teleporteaza la baza echipei tale.
+  help: Vezi aceasta pagina de ajutor.
+  promote: Promoveaza jucatorul specificat in echipa ta.
+  demote: Retrogradeaza jucatorul specificat in echipa ta.
+  unban: Ridica interdictia jucatorului specificat din echipa ta.
+  kick: Da afara jucatorul din echipa ta.
+  leave: Paraseste echipa curenta.
+  chat: Trimite un mesaj doar echipei tale.
+  name: Vezi si schimba numele echipei tale.
+  sethome: Stabileste baza echipei tale.
+  create: Creeaza o echipa cu numele specificat.
+  invite: Invita jucatorul specificat in echipa ta.
+  disband: Desfiinteaza echipa ta curenta.
+  open: Comuta daca echipa este doar pe baza de invitatii.
+  info: Vezi informatii despre jucatorul / echipa specificata.
+  color: Schimba culoarea echipei tale.
+  deposit: Depune bani in balanta echipei tale.
+  bal: Vezi balanta echipei tale.
+  withdraw: Retrage bani din balanta echipei tale.
+  title: Schimba titlul jucatorului in echipa ta.
+  top: Vezi primele echipe.
+  rank: Vezi rangul unei echipe.
+  join: Alatura-te echipei specificate.
+  delhome: Sterge baza echipei tale.
+  ally: Folosit pentru a solicita o alianta cu o alta echipa.
+  neutral: Elimina aliatii si respinge cererile de alianta.
+  allychat: Trimite un mesaj doar aliatilor tai.
+  echest: Vezi enderchest-ul echipei tale.
+  setwarp: Stabileste o teleportare pentru restul echipei tale.
+  warps: Vezi lista teleportarilor echipei tale.
+  rankup: Promoveaza echipa ta pentru a obtine mai multe avantaje.
+  tag: Stabileste eticheta echipei tale.
+  delwarp: Sterge acea teleportare din echipa ta.
+  chest: ''
+  pvp: Comuta daca pvp este activat pentru echipa ta.
+  baltop: Vezi cele mai bogate echipe.
+  list: Obtine o lista a tuturor echipelor de pe server.
+  warp: Teleporteaza-te la o locatie stabilita de echipa ta.
+command:
+  
+  create: create
+  leave: leave
+  disband: disband
+  description: description
+  invite: invite
+  join: join
+  name: name
+  open: open
+  info: info
+  kick: kick
+  promote: promote
+  demote: demote
+  home: home
+  sethome: sethome
+  ban: ban
+  unban: unban
+  chat: chat
+  color: color
+  title: title
+  top: top
+  baltop: baltop
+  rank: rank
+  delhome: delhome
+  ally: ally
+  neutral: neutral
+  allychat: allychat
+  list: list
+  warp: warp
+  setwarp: setwarp
+  delwarp: delwarp
+  warps: warps
+  echest: echest
+  rankup: rankup
+  tag: tag
+  pvp: pvp
+  claim: claim
+  remove: remove
+  removeall: removeall
+  chest: chest
+  reload: reload
+  chatspy: chatspy
+  version: version
+  purge: purge
+  setrank: setrank
+  add: add
+  set: set
+  score: score
+  enableclaims: enableclaims
+  disableclaims: disableclaims
+  teleport: teleport
+  money: money
+  deposit: deposit
+  bal: bal
+  withdraw: withdraw
+internalError: '&4Ceva nu a mers bine executand aceasta comanda, te rugam sa raportezi unu-i owner.'
