@@ -731,6 +731,9 @@ Bug Fixes:
 
 4.8.3:
 
+Features:
+- Added Romanian translations (#518) - Credit Areanydd
+
 Bug fixes: 
 - Improved issues with Dutch translations (#512) - Credit Ceymikey
 - Fixed bug causing /team top to incorrectly rank teams (#513)
